fixing bug
