# API/api/controllers/deals.js
@@ -1,1 +1,35 @@
-var request = require("request");
+(function () {
+ 'use strict';
+   // this function is strict...
+
+
+   var request = require("request");
+
+   module.exports = {
+    getDealsofCategory: deals
+  };
+
+
+  function deals(req, res){
+    var apikey = "HSVyp1jqaZ3kUZWAxqyVgGWgqRprT9N2";
+    var category = req.swagger.params.category.value;
+    var store = req.swagger.params.store.value;
+
+    var options ={
+      "url":"http://api.developer.sears.com/v2.1/deals/fetchWeeklyDeals?store="+store+"&category=Sears_"+category+"&apikey="+ apikey,
+      "headers": {
+        "Content-Type": "application/json",
+        "Accept": "application/json"
+      }
+    };
+
+    request(options, function(error, response, body){
+      if(error){
+        res.send(error);
+      }else{
+        res.json(JSON.parse(body));
+      }
+    });
+  }
+
+}());
